# NeoBot

./: .gitignore  Bot.py  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
app/: pyproject.toml
app/src/app/config/: bot_config.py  env_config.py  loader.py
app/src/app/utils/: logger.py
app/src/data/: README.md
app/src/data/creator/: README.md
app/src/neobot_app/: bootstrap.py  cli.py  image_pool.py  user_profiles.py  web_search_package.py
app/src/neobot_app/agents/: __init__.py  archive_memory.py  chat_interaction.py  creator.py  cross_chat.py  image_parse.py  memory.py  problem_solver.py  scheduled_task.py  willingness.py
app/src/neobot_app/assembly/: __init__.py  adapter.py  agents.py  chat.py  memory.py  sandbox.py  storage.py
app/src/neobot_app/audio/: __init__.py
app/src/neobot_app/bilibili/: __init__.py  client.py  comment_monitor.py  cookie_provider.py  event_bridge.py  private_monitor.py  prompts.py
app/src/neobot_app/bilibili/skills/: __init__.py  account_link.py  bilibili_memory.py  reply_comment.py
app/src/neobot_app/bootstrap/: __init__.py  _config.py  _pipeline.py  _providers.py  _runtime.py  _services.py  _skills.py  _usage.py
app/src/neobot_app/browser/: __init__.py
app/src/neobot_app/browser/agent_browser/: __init__.py  actions.py  manager.py  snapshot.py
app/src/neobot_app/config/: __init__.py  instance.py  loader.py  migrations.py  models.py  proxy.py
app/src/neobot_app/config/loader/: __init__.py  backup.py  (+3 more)
app/src/neobot_app/core/: __init__.py  constants.py  file_server.py  paths.py
app/src/neobot_app/database/: __init__.py  chatstream.py  sqlite.py
app/src/neobot_app/drawing/: __init__.py  config.py  manager.py  service.py  tasks.py
app/src/neobot_app/emoji/: service.py
app/src/neobot_app/image/: parser.py
app/src/neobot_app/message/: numbering.py  process.py  queue.py  queue_impl.py
app/src/neobot_app/observability/: debug.py  logging.py  output.py
app/src/neobot_app/prompt/: builder.py
app/src/neobot_app/reply/: _utils.py  debug.py  event.py  markdown_image.py  orchestrator.py  sender.py  tools.py
app/src/neobot_app/runtime/: __init__.py  application.py  archive_memory_summary.py  background_agent.py  browser_lifecycle.py  event_context.py  event_ingress.py  event_pipeline.py  event_router.py  gateway.py  history_warmup.py  inbound_pipeline.py  lifecycle_handler.py  message_context.py  message_pipeline.py  notice_handler.py  notifications.py  onebot_request_handler.py  sandbox_lock.py  sandbox_maintenance.py  sandbox_service.py  scheduled_tasks.py  temp_cleaner.py
app/src/neobot_app/skills/: __init__.py  adaptive_prompt_skill.py  archive_crud.py  archive_skill.py  background_trigger.py  base.py  birthday_skill.py  browser_network_skill.py  browser_skill.py  browser_video_skill.py  chat_history.py  cross_chat_skill.py  drawing_skill.py  emoji_management.py  favorability.py  file_storage_skill.py  forward_message.py  friend_management.py  gallery_skill.py  gift_skill.py  group_management.py  image_parse_skill.py  image_pool_skill.py  image_send.py  reminder_skill.py  sandbox_maintenance_skill.py  sandbox_manager_skill.py  sticker_skill.py  user_profile.py  willingness_skill.py
app/src/neobot_app/statistics/: __init__.py  reporter.py  tracker.py
app/src/neobot_app/toolpackage/: manager.py  web_search_package.py
app/src/neobot_app/utils/: file_helper.py  formater.py  logger.py  media_sender.py  time.py
app/src/neobot_app/web_parser/: __init__.py  extractor.py  structurer.py
app/src/neobot_app/web_search/: __init__.py  engine.py  manager.py  session.py
app/src/neobot_app/willing/: builtin.py  models.py  service.py
app/tests/: conftest.py  test_event_ingress_local.py  test_file_server.py  test_image_parser_local_get_image.py  test_media_sender.py  test_plugin_context.py  test_runtime_architecture_boundaries.py
(+31 files in other folders)
