[project]
name = "neobot"
version = "0.1.0"
description = "a QQ LLM Bot "
requires-python = ">=3.13"
dependencies = [
    "tomlkit>=0.14.0",
]
authors = [
    { name = "wsrsq", email = "wsrsq001@163.com" },
    { name = "tangtian", email = "a14b@126.com" },
]

[[tool.uv.index]]
url="https://pypi.tuna.tsinghua.edu.cn/simple"
default=true

[tool.uv.workspace]
members = [
    "packages/*",
    "app",
]
