[project]
name = "neobot"
version = "1.0.0-alpha.13"
description = "a QQ LLM Bot "
requires-python = ">=3.13"
authors = [
    { name = "wsrsq", email = "wsrsq001@163.com" },
    { name = "tangtian", email = "a14b@126.com" },
]
dependencies = [
    "drissionpage>=4.1",
    "fpdf2>=2.8",
    "markdown>=3.10",
    "markdown-it-py>=3.0",
    "openpyxl>=3.1",
    "pikepdf>=9.0",
    "pillowmd>=0.7.3",
    "pypdf>=6.7",
    "python-docx>=1.2.0",
    "transformers>=5.9.0",
    "xlsxwriter>=3.2",
]
[[tool.uv.index]]
url="https://pypi.tuna.tsinghua.edu.cn/simple"
default=true

[tool.uv.workspace]
members = [
    "packages/*",
    "app",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests", "packages/adapter/tests", "packages/modloader/tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "prompt-toolkit>=3.0.0",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.5",
]
