[project]
name = "neobot-app"
version = "1.0.0-alpha.14"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wsrsq", email = "wsrsq001@163.com" },
    { name = "tangtian", email = "a14b@126.com" },
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "beautifulsoup4>=4.12.0",
    "cryptography>=46.0.0",
    "ddgs>=9.0.0",
    "drissionpage>=4.1",
    "duckduckgo-search>=8.0.0",
    "fpdf2>=2.8",
    "httpx>=0.27.0",
    "loguru",
    "lxml>=5.0.0",
    "Markdown>=3.10",
    "markdown-it-py>=3.0",
    "markdownify>=1.0.0",
    "neobot-adapter",
    "neobot-chat",
    "neobot-contracts",
    "neobot-memory",
    "neobot-modloader",
    "neobot-storage",
    "openpyxl>=3.1",
    "pillow>=10.0.0",
    "pillowmd>=0.7.3",
    "pikepdf>=9.0",
    "playwright>=1.55.0",
    "pypdf>=6.7",
    "pywin32>=310",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.0",
    "requests>=2.32.0",
    "sqlalchemy[asyncio]>=2.0",
    "tomlkit",
    "trafilatura>=2.0.0",
    "union",
    "lunarcalendar>=0.0.9",
    "xlsxwriter>=3.2",
]

[project.scripts]
neobot = "neobot_app.cli:main"

[tool.uv.sources]
neobot-adapter = { workspace = true }
neobot-chat = { workspace = true }
neobot-contracts = { workspace = true }
neobot-memory = { workspace = true }
neobot-modloader = { workspace = true }
neobot-storage = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
